hphp/hack/test/typecheck/array/safe_vector_array/disallow_darray_with_wrong_key_type_where_varray_or_darray_is_required_in_non_strict_mode.php
<?hh

abstract class Class {

  public abstract function providesDarrayOfBoolToString(
  ): darray<bool, string>;
  public abstract function takesDarrayOrVarrayOfTany(
    varray_or_darray $x,
  ): void;

  public function test() {
    $this->takesDarrayOrVarrayOfTany($this->providesDarrayOfBoolToString());
  }
}
